--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,29 @@
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
+dist
+build
+
+# Misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
-
-/cypress/videos/
-/cypress/screenshots/
+*.log
 
 # Editor directories and files
 .vscode/*
@@ -27,4 +35,15 @@ coverage
 *.sln
 *.sw?
 
-*.tsbuildinfo
+# Hardhat files
+cache
+artifacts
+typechain
+typechain-types
+
+# Hardhat
+coverage.json
+coverage
+
+# Local environment
+.env
